--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.espspl">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
    <application
         android:label="espspl"
         android:name="${applicationName}"
